Done with Login Page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#pricing">Pricing</a>
         </div>
         <div class="nav-actions">
-            <a href="dashboard.html" class="btn-text">Log In</a>
+            <a href="login.html" class="btn-text">Log In</a>
             <a href="dashboard.html" class="btn-primary">Get Started</a>
         </div>
     </nav>
