--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                <div class="forget-link">
                  <a href="#">Forget Password?</a>
                </div>
-               <button type="submit" class="btn">Login</button>
+               <button type="button" class="btn" onclick="location.href='index.html'">Login</button>
                <p>or login with social platform</p>
                <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-google"></i></a>
@@ -53,7 +53,7 @@
                 <input type="password" placeholder="Password" required>
                 <i class="fa-solid fa-lock"></i>
                </div>
-               <button type="submit" class="btn">Register</button>
+               <button type="button" class="btn" onclick="location.href='index.html'">Register</button>
                <p>or register with social platform</p>
                <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-google"></i></a>
